/*
 * $Id: ChangeLog,v 1.399 2002/09/24 03:26:11 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-09-23 21:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added logic to support a RETURN from inside a WITH OBJECT block.

2002-09-23 20:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed long oustanding issue of correct support for \ (escape) in pre-processor rules.

  * include/hbclass.ch
    + Added missing escapes in nested directives.

  * include/hbexpra.c
    + Added compile time optimization of Upper() when applied to a literal.

  * source/vm/hvm.c
    + Added logic to support a RETURN from inside a FOR EACH loop.

  * tests/pp.prg
    + Added support for \\ (double esacpe).
    ! Fixed possible infinite loop when marking match marker as repeatable.

2002-09-23 10:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/hvm.c
    + Added void hb_vmRegisterGlobals( PHB_ITEM **pGlobals, short iGlobals )

  * source/compiler/genc.c
    * Changed generation of hb_REGISTERGLOBALS() to call new hb_vmRegisterGlobals()

  * source/vm/hvm.c
    * Modified HB_ITEM hb_vm_aGlobals to static HB_ITEM s_aGlobals.
    + Added hb_arrayRelease( &s_aGlobals ) to hb_vmQuit()
    + Added HB_FUNC( __VMVARGLIST ) returns clone of Globals Array.

  * source/compiler/harbour.c
    - Removed generation of hb_RELEASEGLOBALS()

  * source/compiler/harbour.sly
    + Added Static Intialization check on values used to initialize GLOBALS.

2002-09-22 17:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbpcode.h
  * source/compiler/hbpcode.c
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/hbfix.c
  * source/vm/hvm.c
    + Readded support for HB_P_PUSHGLOBALREF

  * source/vm/hvm.c